# cookiecutter-ansible-collection

./: .example-cookiecutterrc  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/: .ansible-lint  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  README.md  galaxy.yml  pyproject.toml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/.github/workflows/: default.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/almalinux9/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/debian10/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/debian11/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/debian12/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/fedora41/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/rocky8/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/rocky9/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/shared/: converge.yml  prepare.yml  verify.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/ubuntu2004/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/ubuntu2204/: molecule.yml
{{cookiecutter.namespace_slug}}/{{cookiecutter.collection_slug}}/molecule/ubuntu2404/: molecule.yml
(+2 files in other folders)
