[project]
name = "cookiecutter-ansible-collection"
version = "0.1.0"
description = "Cookiecutter template for Ansible collections"
authors = [{ name = "Larry Smith Jr.", email = "mrlesmithjr@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["cookiecutter>=2.6"]

[project.optional-dependencies]
dev = ["ansible-lint>=25.0", "molecule>=26.0", "pre-commit>=4.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"
