[project]
name = "{{cookiecutter.collection_slug}}"
version = "1.0.0"
description = "{{cookiecutter.description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "ansible-core>=2.16",
  "ansible-lint>=25.0",
  "molecule>=26.0",
  "molecule-plugins[docker]>=23.0",
  "pre-commit>=4.0",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]

[tool.ruff.format]
